--- a/style.css
+++ b/style.css
@@ -27,7 +27,15 @@
 #cat-photo {
     height: 250px;
     border: 8px solid #fff;
+    margin-top: 6px;
+}
+.cat-photo {
     box-shadow: 2px 2px 8px #ccc;
+    transition: all .07s;
+}
+.photo-click {
+    box-shadow: 0px 0px 0px #ccc;
+    transition: all .07s;
 }
 #cat-photo:hover {
     cursor: pointer;
